Fix header when screen gets smaller
When screen size was too small there was a little patch to the right of body

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
 }
 
 body {
+    width: 100vw;
     height: 100vh;
     padding: 0;
     margin: 0;
@@ -32,12 +33,11 @@ body {
     grid-template: 1fr 5fr / 250px 5fr;
 }
 
-.header, .sidebar { 
-    padding-right: 5%;
-}
+
 
 .header {
     position: relative;
+    min-width: 1000px;
     background-color: white;
     box-shadow: 6px 0px 8px 6px #888888;
     grid-area: 1 / 2 / 2 / -1;
@@ -46,9 +46,8 @@ body {
 }
 
 .top {
-    min-width: 800px;
     display: grid;
-    grid-template-columns: auto clamp(320px, 30%, 400px);
+    grid-template-columns: auto clamp(360px, 20%, 400px);
     justify-items: center;
     align-items: center;
 }
@@ -76,7 +75,7 @@ body {
 }
 
 .top, .bottom {
-    margin-left: 5%;
+    margin-left: 3%;
 }
 
 .user {
@@ -88,8 +87,8 @@ body {
 
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: 1fr 1fr 1fr 2fr;
-    grid-template-areas: ". bell icon name";
+    grid-template-columns: 48px 48px 2fr;
+    grid-template-areas: "bell icon name";
     justify-items: center;
     align-items: center;
     gap: 1rem;
@@ -110,6 +109,7 @@ body {
     text-align: center;
     justify-self: center;
     grid-area: name;
+    margin-right:8px;
 }
 
 .top .user-icon {
@@ -161,7 +161,7 @@ ul {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
-    justify-items: end;
+    justify-items: center;
     gap: 4px;
 }
 
